--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="h1TextStyle">
+        <item name="android:textSize">@dimen/textsize_very_big</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+    <style name="h2TextStyle">
+        <item name="android:textSize">@dimen/textsize_big</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 </resources>
