Make Recipe, Ingredient and Step data classes parcelable, and successfully pass those objects to RecipeStepListFragment There's a temporary textview in RecipeStepListFragment to check it working, though. Need to delete it soon.

--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -8,6 +8,10 @@
         layout="@layout/ingredients"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
+    <TextView
+        android:id="@+id/temp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_recipe_step_list_recyclerview"
         android:layout_width="match_parent"
