--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,8 @@
         <item name="android:textSize">@dimen/textsize_big</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
+    <style name="normalTextStyle">
+        <item name="android:textSize">@dimen/textsize_normal</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 </resources>
