--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -7,7 +7,7 @@
     <include
         layout="@layout/ingredients"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/temp"
         android:layout_width="match_parent"
