--- a/app/src/main/res/layout/ingredients.xml
+++ b/app/src/main/res/layout/ingredients.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:elevation="@dimen/elevation_normal">
     <TextView
@@ -15,5 +15,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ingredients_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
