--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -1,37 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recipe_list_item_parent"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_margin="@dimen/spacing_small"
-    android:background="?android:attr/selectableItemBackground"
-    android:elevation="@dimen/elevation_normal">
-    <ImageView
-        android:id="@+id/recipe_list_item_image"
+    app:cardElevation="1dp"
+    app:cardMaxElevation="4dp"
+    app:cardUseCompatPadding="true">
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:alpha="0.5"/>
-    <TextView
-        android:id="@+id/recipe_list_item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        tools:text="Name of recipe"
-        style="@style/h1TextStyle"/>
-    <TextView
-        android:id="@+id/recipe_list_item_servings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recipe_list_item_name"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintLeft_toRightOf="parent"
-        android:layout_marginTop="@dimen/spacing_small"
-        tools:text="8 people"
-        style="@style/h2TextStyle"/>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/recipe_list_item_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:alpha="0.5"/>
+        <TextView
+            android:id="@+id/recipe_list_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            tools:text="Name of recipe"
+            style="@style/h1TextStyle"/>
+        <TextView
+            android:id="@+id/recipe_list_item_servings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/recipe_list_item_name"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="parent"
+            android:layout_marginTop="@dimen/spacing_small"
+            tools:text="8 people"
+            style="@style/h2TextStyle"/>
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
