--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -16,7 +16,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_recipe_step_list_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/ingredients"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_height="match_parent"/>
 </android.support.constraint.ConstraintLayout>
