--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="spacing_small">4dp</dimen>
+    <dimen name="spacing_smaller">8dp</dimen>
+    <dimen name="spacing_normal">12dp</dimen>
+    <dimen name="spacing_bigger">16dp</dimen>
     <dimen name="spacing_big">20dp</dimen>
+    <dimen name="spacing_very_big">24dp</dimen>
 
     <dimen name="elevation_normal">8dp</dimen>
 
