--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <include
-        android:id="@+id/ingredients"
-        layout="@layout/ingredients"
+    android:layout_height="match_parent">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/ingredients_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
+    <Button
+        android:id="@+id/ingredients_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/text_ingredients"
+        app:layout_constraintTop_toBottomOf="@id/ingredients_recyclerview"
+        style="@style/h2TextStyle"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/shadow_height"
-        app:layout_constraintTop_toBottomOf="@id/ingredients"
+        app:layout_constraintTop_toBottomOf="@id/ingredients_header"
         android:background="@drawable/shadow_background"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_recipe_step_list_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/ingredients_header"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
