Use third party library to use sliding panel. Ingredients are bottom sliding panels now.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="textsize_very_big">30sp</dimen>
 
     <dimen name="shadow_height">10dp</dimen>
+    <dimen name="sliding_panel_height">80dp</dimen>
 </resources>
