--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="bottom"
+    sothree:umanoOverlay="false"
+    sothree:umanoPanelHeight="@dimen/sliding_panel_height"
+    sothree:umanoShadowHeight="@dimen/shadow_height">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/ingredients_recyclerview"
+        android:id="@+id/fragment_recipe_step_list_steps_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"/>
-    <Button
-        android:id="@+id/ingredients_header"
+        android:layout_height="match_parent"/>
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/text_ingredients"
-        app:layout_constraintTop_toBottomOf="@id/ingredients_recyclerview"
-        style="@style/h2TextStyle"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/shadow_height"
-        app:layout_constraintTop_toBottomOf="@id/ingredients_header"
-        android:background="@drawable/shadow_background"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_recipe_step_list_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/ingredients_header"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/ingredients_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            sothree:layout_constraintTop_toTopOf="parent"
+            android:gravity="center"
+            android:text="@string/text_ingredients"
+            style="@style/h2TextStyle" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_recipe_step_list_ingredients_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            sothree:layout_constraintTop_toBottomOf="@id/ingredients_header"/>
+    </android.support.constraint.ConstraintLayout>
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
+
