--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -2,6 +2,7 @@
 <com.sothree.slidinguppanel.SlidingUpPanelLayout
     xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_recipe_step_list_slider"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
