--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -9,10 +9,20 @@
     sothree:umanoOverlay="false"
     sothree:umanoPanelHeight="@dimen/sliding_panel_height"
     sothree:umanoShadowHeight="@dimen/shadow_height">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_recipe_step_list_steps_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_recipe_step_list_steps_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <View
+            android:id="@+id/fragment_recipe_step_list_click_prevent_screen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:visibility="gone"/>
+    </FrameLayout>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
