--- a/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:id="@+id/activity_recipe_detail_navigation_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/activity_recipe_detail_step_list_fragment_container"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
-    <FrameLayout
-        android:id="@+id/activity_recipe_detail_step_detail_fragment_container"
-        android:layout_width="0dp"
+        android:baselineAligned="true">
+        <FrameLayout
+            android:id="@+id/activity_recipe_detail_step_list_fragment_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+        <FrameLayout
+            android:id="@+id/activity_recipe_detail_step_detail_fragment_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"/>
+    </LinearLayout>
+    <ListView
+        android:id="@+id/activity_recipe_detail_navigation_drawer_view"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"/>
-</LinearLayout>
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/black"
+        android:dividerHeight="3dp"
+        android:background="@android:color/white"/>
+</android.support.v4.widget.DrawerLayout>
