--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
 
     <dimen name="shadow_height">10dp</dimen>
     <dimen name="sliding_panel_height">80dp</dimen>
+
+    <dimen name="tablet_step_list_view_width">300dp</dimen>
 </resources>
