--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -8,13 +8,10 @@
         android:id="@+id/activity_recipe_detail_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_recipe_detail_navigation_drawer_view"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/black"
-        android:dividerHeight="3dp"
         android:background="@android:color/white"/>
 </android.support.v4.widget.DrawerLayout>
