--- a/app/src/main/res/layout/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_detail.xml
@@ -1,6 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</android.support.constraint.ConstraintLayout>
+    android:layout_height="match_parent"
+    android:keepScreenOn="true"
+    android:fillViewport="true">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/fragment_recipe_step_detail_short_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:padding="@dimen/spacing_normal"
+            android:textSize="@dimen/textsize_bigger"
+            android:gravity="center"
+            tools:text="short description"/>
+        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+            android:id="@+id/fragment_recipe_step_detail_exoplayerview"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_step_detail_short_description"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            android:layout_marginTop="@dimen/spacing_big"/>
+        <TextView
+            android:id="@+id/fragment_recipe_step_detail_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/fragment_recipe_step_detail_exoplayerview"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="parent"
+            android:layout_marginTop="@dimen/spacing_big"
+            tools:text="Description blah blah blahblah"/>
+        <Button
+            android:id="@+id/fragment_recipe_step_detail_previous_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:layout_marginLeft="@dimen/spacing_normal"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:text="@string/text_previous_button"
+            android:textAllCaps="true"/>
+        <Button
+            android:id="@+id/fragment_recipe_step_detail_next_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:layout_marginRight="@dimen/spacing_normal"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:text="@string/text_next_button"
+            android:textAllCaps="true"/>
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
