--- a/app/src/main/res/layout/step_list_item.xml
+++ b/app/src/main/res/layout/step_list_item.xml
@@ -7,7 +7,7 @@
         android:id="@+id/step_list_item_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/recipeStepStyle"/>
+        style="@style/recipeStepListStepTextStyle"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
