Animation working fine - instead of fragment transaction, just animate the fragment and renew the contents. Other problems occur when rotating screen -> has to do with preference

--- a/app/src/main/res/animator/fragment_slide_right_exit.xml
+++ b/app/src/main/res/animator/fragment_slide_right_exit.xml
@@ -4,5 +4,5 @@
         android:valueFrom="0dp" android:valueTo="800dp"
         android:valueType="floatType"
         android:propertyName="translationX"
-        android:duration="@android:integer/config_mediumAnimTime" />
+        android:duration="100" />
 </set>
