--- a/app/src/main/res/animator/fragment_fade_out.xml
+++ b/app/src/main/res/animator/fragment_fade_out.xml
@@ -4,5 +4,5 @@
         android:valueFrom="1.0" android:valueTo="0.0"
         android:valueType="floatType"
         android:propertyName="alpha"
-        android:duration="@android:integer/config_longAnimTime" />
+        android:duration="100" />
 </set>
