--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -34,9 +34,13 @@
             android:gravity="center"
             android:text="@string/text_ingredients"
             style="@style/h2TextStyle" />
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/fragment_recipe_step_list_ingredients_view"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/fragment_recipe_step_list_ingredients_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </ScrollView>
     </LinearLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
