--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="sliding_panel_height">80dp</dimen>
 
     <dimen name="tablet_step_list_view_width">300dp</dimen>
+
+    <dimen name="video_height">300dp</dimen>
+
 </resources>
