--- a/app/src/main/res/layout/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_detail.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:keepScreenOn="true"
     android:fillViewport="true">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -68,7 +67,8 @@
             android:layout_marginLeft="@dimen/spacing_normal"
             android:layout_marginStart="@dimen/spacing_normal"
             android:text="@string/text_previous_button"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            app:layout_constraintVertical_bias="1.0" />
         <Button
             android:id="@+id/fragment_recipe_step_detail_next_btn"
             android:layout_width="wrap_content"
@@ -80,6 +80,7 @@
             android:layout_marginRight="@dimen/spacing_normal"
             android:layout_marginEnd="@dimen/spacing_normal"
             android:text="@string/text_next_button"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            app:layout_constraintVertical_bias="1.0" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
