Exoplayer fullscreen mode works

--- a/app/src/main/res/layout/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_detail.xml
@@ -20,14 +20,13 @@
             android:textSize="@dimen/textsize_bigger"
             android:gravity="center"
             tools:text="short description"/>
-        <FrameLayout
+        <RelativeLayout
             android:id="@+id/fragment_recipe_step_detail_exoplayerview_container"
             android:layout_width="0dp"
             android:layout_height="@dimen/video_height"
             app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_step_detail_short_description"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="@dimen/spacing_big">
+            app:layout_constraintRight_toRightOf="parent">
             <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                 android:id="@+id/fragment_recipe_step_detail_exoplayerview"
                 android:layout_width="match_parent"
@@ -48,7 +47,7 @@
                 android:gravity="center"
                 android:text="@string/text_broken_video"
                 android:visibility="gone"/>
-        </FrameLayout>
+        </RelativeLayout>
         <TextView
             android:id="@+id/fragment_recipe_step_detail_description"
             android:layout_width="wrap_content"
