--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -24,6 +24,15 @@
         <ImageButton
             android:id="@id/exo_ffwd"
             style="@style/ExoMediaButton.FastForward"/>
+        <ImageButton
+            android:id="@+id/exo_full"
+            android:src="@drawable/ic_fullscreen_white_24dp"
+            style="@style/ExoMediaButton"/>
+        <ImageButton
+            android:id="@+id/exo_full_exit"
+            android:src="@drawable/ic_fullscreen_exit_white_24dp"
+            style="@style/ExoMediaButton"
+            android:visibility="gone"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
