--- a/app/src/main/res/layout/fragment_recipe_step_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_list.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/text_ingredients"
-            style="@style/h2TextStyle" />
+            style="@style/recipeServingsTextStyle" />
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fragment_recipe_step_list_ingredients_view"
             android:layout_width="match_parent"
