Modify recipe detail activity design

--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -10,8 +10,7 @@
         android:layout_height="match_parent"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_recipe_detail_navigation_drawer_view"
-        android:layout_width="240dp"
+        android:layout_width="@dimen/drawer_width"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:color/white"/>
+        style="@style/drawerStyle"/>
 </android.support.v4.widget.DrawerLayout>
