--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,8 +15,9 @@
     <dimen name="textsize_very_big">30sp</dimen>
     <dimen name="textsize_header">40sp</dimen>
     <dimen name="textsize_subheader">20sp</dimen>
+    <dimen name="textsize_ingredient_item">12sp</dimen>
 
-    <dimen name="shadow_height">10dp</dimen>
+    <dimen name="sliding_panel_shadow_height">10dp</dimen>
     <dimen name="sliding_panel_height">80dp</dimen>
 
     <dimen name="tablet_step_list_view_width">300dp</dimen>
@@ -24,4 +25,7 @@
     <dimen name="video_height">300dp</dimen>
 
     <dimen name="recipe_card_height">200dp</dimen>
+    <dimen name="drawer_width">240dp</dimen>
+    <dimen name="drawer_item_height">70dp</dimen>
+    <dimen name="drawer_item_imageview_width">70dp</dimen>
 </resources>
