Modify step detail fragment design

--- a/app/src/main/res/layout/appwidget.xml
+++ b/app/src/main/res/layout/appwidget.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:textSize="@dimen/textsize_big"
+        android:textSize="@dimen/textsize_subheader"
         android:textColor="@android:color/black"/>
     <ListView
         android:id="@+id/appwidget_ingredients"
@@ -21,6 +21,6 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
         android:gravity="center"
-        android:textSize="@dimen/textsize_bigger"
+        android:textSize="@dimen/textsize_subheader"
         android:text="@string/text_appwidget_ingredients_empty"/>
 </LinearLayout>
