--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,13 +9,10 @@
 
     <dimen name="elevation_normal">8dp</dimen>
 
-    <dimen name="textsize_normal">12sp</dimen>
-    <dimen name="textsize_bigger">18sp</dimen>
-    <dimen name="textsize_big">24sp</dimen>
-    <dimen name="textsize_very_big">30sp</dimen>
     <dimen name="textsize_header">40sp</dimen>
     <dimen name="textsize_subheader">20sp</dimen>
     <dimen name="textsize_ingredient_item">12sp</dimen>
+    <dimen name="textsize_long_description">14sp</dimen>
 
     <dimen name="sliding_panel_shadow_height">10dp</dimen>
     <dimen name="sliding_panel_height">80dp</dimen>
