--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,7 @@
     <style name="drawerItemTextStyle">
         <item name="android:gravity">start|center_vertical</item>
         <item name="android:paddingLeft">@dimen/spacing_small</item>
+        <item name="android:paddingStart">@dimen/spacing_small</item>
         <item name="android:textSize">@dimen/textsize_subheader</item>
         <item name="android:textColor">@color/textColorPrimary</item>
     </style>
@@ -51,5 +52,28 @@
     <style name="clickableStyle">
         <item name="android:clickable">true</item>
         <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+    <style name="stepDetailShortDescTextStyle">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/textsize_subheader</item>
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:padding">@dimen/spacing_small</item>
+        <item name="android:layout_marginTop">@dimen/spacing_normal</item>
+    </style>
+    <style name="stepDetailLongDescTextStyle">
+        <item name="android:layout_marginTop">@dimen/spacing_normal</item>
+        <item name="android:textColor">@color/textColorSecondary</item>
+        <item name="android:textSize">@dimen/textsize_long_description</item>
+        <item name="android:gravity">start</item>
+        <item name="android:paddingLeft">@dimen/spacing_normal</item>
+        <item name="android:paddingRight">@dimen/spacing_normal</item>
+        <item name="android:paddingStart">@dimen/spacing_normal</item>
+        <item name="android:paddingEnd">@dimen/spacing_normal</item>
+    </style>
+    <style name="prevNextButtonStyle">
+        <item name="android:layout_margin">@dimen/spacing_normal</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:background">@color/colorPrimaryLight</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
