Modify widget design and fix little stuffs

--- a/app/src/main/res/layout/appwidget.xml
+++ b/app/src/main/res/layout/appwidget.xml
@@ -3,14 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/white">
     <TextView
         android:id="@+id/appwidget_recipe_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="@dimen/textsize_subheader"
-        android:textColor="@android:color/black"/>
+        style="@style/widgetHeaderTextStyle"/>
     <ListView
         android:id="@+id/appwidget_ingredients"
         android:layout_width="match_parent"
