--- a/app/src/main/res/layout/appwidget_configure.xml
+++ b/app/src/main/res/layout/appwidget_configure.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/appwidget_configure_listview"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_widget_pick_recipe"
+        style="@style/widgetConfigHeaderTextStyle"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:src="@drawable/shadow_background"
+        android:layout_marginBottom="@dimen/spacing_normal"/>
+    <ListView
+        android:id="@+id/appwidget_configure_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
