--- a/app/src/main/res/layout/appwidget_list_item.xml
+++ b/app/src/main/res/layout/appwidget_list_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="false">
     <TextView
-        android:id="@+id/appwidget_configure_list_item_text"
+        android:id="@+id/appwidget_list_item_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/widgetConfigItemTextStyle"/>
-</FrameLayout>
+        style="@style/widgetIngredientItemTextStyle"/>
+</RelativeLayout>
