--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="main_grid_column_number">1</integer>
+    <integer name="swipe_threshold">300</integer>
 </resources>
